--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node backend/server.js",
     "server": "nodemon backend/server.js",
     "frontend": "npm start --prefix frontend",
+    "setup": "npm i && npm i --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run frontend\"",
     "render-postbuild": "NPM_CONFIG_PRODUCTION=false && npm install --prefix frontend && npm run build --prefix frontend"
   },
